# OPsVerse

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTINUE_SESSION.md  README.md  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml  eval-gate.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_ingestion_tables.py  0002_request_ledger.py  0003_eval_tables.py
apps/api/src/opsverse_api/: __init__.py  deps.py  export_corpus.py  main.py  stream_ingest.py  worker.py
apps/api/src/opsverse_api/db/: models.py  session.py
apps/api/src/opsverse_api/routers/: chat.py  costs.py  evals.py  health.py  ingest.py  search.py
apps/api/tests/: conftest.py  test_chat.py  test_costs.py  test_evals_reports.py  test_health.py  test_ingest.py  test_search.py
apps/mcp-server/: README.md  pyproject.toml
apps/mcp-server/src/opsverse_mcp/: client.py  server.py
apps/mcp-server/tests/: test_client.py
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/costs/: page.tsx
apps/web/src/app/evals/: page.tsx
apps/web/src/components/: nav.tsx
apps/web/src/lib/: api.ts
benchmarks/: README.md  harness.py  report.py  run_suite.py
benchmarks/notebooks/: opslm_inference_bench_colab.ipynb
benchmarks/results/: .gitkeep
benchmarks/techniques/: constrained.py  frontier.py  speculative.py
benchmarks/tests/: test_constrained.py  test_frontier.py  test_harness.py  test_report.py  test_run_suite.py  test_speculative.py
data/: .gitignore  corpus.dvc  instructions.dvc
data/sft/: manifest.json  train.jsonl  val.jsonl
docs/: architecture.md  demo-runbook.md  eval-contamination-policy.md  latency-budget.md  migration-plan.md
docs/adr/: 0001-monorepo-with-uv-workspaces.md  0002-qdrant-over-pgvector-and-pinecone.md  0003-fastembed-bge-base-hybrid.md  0004-chat-serving-thin-litellm-sse.md  0005-ci-eval-gate-committed-fixture.md  0006-prompt-variant-testing-without-promptfoo.md  0007-layered-security-heuristics-over-presidio.md  0008-gateway-as-library-not-proxy.md  0009-qwen3-4b-qlora-for-opslm.md  0010-observability-langfuse-v2-facade.md  0011-inference-lab-openai-compatible-harness.md  0012-structured-output-tool-use-eval.md  0013-streaming-ingestion-redis-streams.md  0014-inference-optimization-techniques.md  0015-dpo-preference-alignment.md  0016-split-serving-ephemeral-gpu-vs-always-on-cpu.md
docs/blog/: 01-eval-first-changed-my-retrieval-twice.md  02-the-document-is-the-attack-surface.md
docs/reports/: rag-quality-smoke-summary.json  retrieval-ablation-v1-raw.json  retrieval-ablation-v1-summary.json  retrieval-ablation-v1.md  retrieval-ablation-v2-raw.json  retrieval-ablation-v2-summary.json  retrieval-ablation-v2.md  retrieval-ablation-v3-raw.json  retrieval-ablation-v3-summary.json  retrieval-ablation-v3.md  security-redteam-v1-summary.json  structured-output-v1-summary.json
evalsets/: regression-thresholds.json  retrieval-v1.jsonl  retrieval-v2.jsonl  retrieval-v3.jsonl  security-redteam-v1.jsonl  structured-output-v1.jsonl
evalsets/ci/: ci-corpus.jsonl  retrieval-ci.jsonl
infra/compose/: docker-compose.yml
infra/hf-space-opslm/: Dockerfile  README.md  app.py  requirements.txt
infra/k8s/: README.md  api.yaml  config.yaml  ingress.yaml  namespace.yaml  redis.yaml  stateful.yaml  worker.yaml
infra/oracle-opslm/: README.md  setup.sh
libs/core/: pyproject.toml
libs/core/src/opsverse_core/: __init__.py  gateway.py  llm.py  object_store.py  settings.py  streaming.py  tracing.py
libs/core/tests/: test_gateway.py  test_llm.py  test_settings.py  test_streaming.py  test_tracing.py
libs/evals/: pyproject.toml
libs/evals/src/opsverse_evals/: __init__.py  build_ci_fixture.py  ci_retrieval_smoke.py  contamination.py  generate_retrieval_set.py  judge.py  metrics.py  paraphrase_evalset.py  rag_suite.py  regression.py  reporting.py  run_ablation.py  schemas.py  structured_eval.py
libs/evals/tests/: test_contamination.py  test_metrics_and_schemas.py  test_paraphrase_evalset.py  test_regression.py  test_structured_eval.py
libs/ingestion/: pyproject.toml
libs/ingestion/src/opsverse_ingestion/: __init__.py  chunking.py  pipeline.py  quality.py  schemas.py
libs/ingestion/src/opsverse_ingestion/parsers/: __init__.py  code.py  common.py  html.py  markdown.py  pdf.py  text.py
libs/ingestion/tests/: test_chunking_quality.py  test_parsers.py
libs/rag/: pyproject.toml
libs/rag/src/opsverse_rag/: __init__.py  chat.py  embeddings.py  rerank.py  retriever.py  schemas.py  store.py
libs/rag/tests/: test_chat_service.py  test_retriever.py  test_store.py
libs/security/: pyproject.toml
libs/security/src/opsverse_security/: __init__.py  evaluate.py  injection.py  redact.py
libs/security/tests/: test_security.py
libs/training/: pyproject.toml
libs/training/src/opsverse_training/: __init__.py  generate_instructions.py  generate_preferences.py  preferences.py  quality.py  schemas.py
libs/training/tests/: test_preferences.py  test_prepare_sft.py  test_quality_and_planning.py  test_train_format.py
opslm-demo/: README.md  package-lock.json  package.json
opslm-demo/app/: globals.css  layout.tsx  page.tsx
opslm-demo/app/api/chat/: route.ts
training/: README.md
training/kaggle/: README.md  kernel-metadata.json  opslm_qlora_kaggle.ipynb
training/notebooks/: opslm_dpo_colab.ipynb  opslm_qlora_colab.ipynb
training/scripts/: prepare_sft.py  train_opslm_dpo.py  train_opslm_qlora.py
