[project]
name = "opsverse-api"
version = "0.1.0"
description = "OpsVerse API — FastAPI service exposing ingest, search, chat, eval, and benchmark endpoints"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "opsverse-core",
    "opsverse-ingestion",
    "opsverse-rag",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "qdrant-client>=1.12",
    "httpx>=0.28",
    "arq>=0.26",
    "python-multipart>=0.0.18",
    "anyio>=4",
]

[tool.uv.sources]
opsverse-core = { workspace = true }
opsverse-ingestion = { workspace = true }
opsverse-rag = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opsverse_api"]
