[project]
name = "opsverse-mcp"
version = "0.1.0"
description = "OpsVerse MCP server: exposes platform search/chat/evals/costs to Claude Desktop, Cursor, and other MCP clients (Phase 10)"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.28",
]

[project.scripts]
opsverse-mcp = "opsverse_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opsverse_mcp"]
