[project]
name = "opsverse-core"
version = "0.1.0"
description = "Shared settings, schemas, and clients for OpsVerse services"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "minio>=7.2",
    # <1.92: 1.92+ adds a Rust extension (litellm-rust) with no Windows wheel,
    # and this dev machine has no MSVC toolchain to build it.
    "litellm>=1.60,<1.92",
    # v2 SDK pairs with the self-hosted Langfuse v2 server (ADR-0010).
    "langfuse>=2.50,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opsverse_core"]
