[project]
name = "opsverse-evals"
version = "0.1.0"
description = "OpsVerse evaluation: retrieval eval sets, IR metrics, ablation harness (Phase 4 grows RAGAS/DeepEval here)"
requires-python = ">=3.12"
dependencies = [
    "opsverse-core",
    "opsverse-rag",
    "pydantic>=2.10",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "qdrant-client>=1.12",
    "anyio>=4",
]

[tool.uv.sources]
opsverse-core = { workspace = true }
opsverse-rag = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opsverse_evals"]
