[project]
name = "opsverse-ingestion"
version = "0.1.0"
description = "OpsVerse ingestion: parsing, source-aware chunking, quality gates"
requires-python = ">=3.12"
dependencies = [
    "opsverse-core",
    "opsverse-security",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "httpx>=0.28",
]

[project.optional-dependencies]
pdf = ["docling>=2.15"]

[tool.uv.sources]
opsverse-core = { workspace = true }
opsverse-security = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opsverse_ingestion"]
