[project]
name = "opsverse-rag"
version = "0.1.0"
description = "OpsVerse retrieval: hybrid dense+sparse search over Qdrant, reranking, citations"
requires-python = ">=3.12"
dependencies = [
    "opsverse-core",
    "pydantic>=2.10",
    "qdrant-client>=1.12",
    "fastembed>=0.5",
    "anyio>=4",
]

[tool.uv.sources]
opsverse-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opsverse_rag"]
