[project]
name = "opsverse-security"
version = "0.1.0"
description = "OpsVerse AI security: prompt-injection heuristics, secret redaction, ingest-time document scanning (Phase 9)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opsverse_security"]
