[project]
name = "opsverse-training"
version = "0.1.0"
description = "OpsVerse training data: synthetic instruction dataset pipeline (Phase 5) — generation, quality filtering, dedup, decontamination"
requires-python = ">=3.12"
dependencies = [
    "opsverse-core",
    "opsverse-evals",
    "pydantic>=2.10",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
]

[tool.uv.sources]
opsverse-core = { workspace = true }
opsverse-evals = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opsverse_training"]
